--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
         vertical-align: sub;
       }
       .content__inner h1 {
-        font-size: 2.4375em;
+        font-size: clamp(1.875rem, 1.67rem + 1.02vw, 2.438rem);
         margin-bottom: 16px;
       }
       .content__inner h2 {
         text-transform: uppercase;
-        font-size: 1.9375em;
+        font-size: clamp(1.5rem, 1.341rem + 0.8vw, 1.938rem);
         margin: 16px 0;
       }
       .content__inner p + p {
@@ -220,7 +220,7 @@
         display: inline-block;
         padding-inline: 24px;
         padding-block: 6px;
-        font-size: 14px;
+        font-size: clamp(0.688rem, 0.274rem + 2.07vw, 0.875rem);
         font-weight: 600;
         text-transform: uppercase;
         color: #fff;
@@ -285,7 +285,7 @@
       }
       .main__text-title {
         color: #fff;
-        font-size: 40px;
+        font-size: clamp(2rem, 1.818rem + 0.91vw, 2.5rem);
         font-weight: 800;
         line-height: 1.1;
         text-transform: uppercase;
@@ -315,8 +315,6 @@
         font-weight: 700;
         line-height: 20px;
         display: inline-block;
-        margin-left: 50%;
-        transform: translateX(-50%);
         text-transform: uppercase;
       }
       .more-games:hover {
@@ -334,6 +332,7 @@
         background-position: bottom center;
         background-repeat: no-repeat;
         position: relative;
+        width: fit-content;
       }
       .popular__link::after {
         content: '';
@@ -363,6 +362,7 @@
         background: #0d0c38;
         border: 2px solid #ffffff24;
         padding: 7px;
+        font-size: clamp(0.875rem, 0.83rem + 0.23vw, 1rem);
         font-weight: 700;
         line-height: 1.2;
       }
@@ -413,17 +413,22 @@
         .popular {
           grid-template-columns: repeat(3, 1fr);
         }
+        .footer {
+          margin-top: 16px;
+        }
         .footer__nav {
           grid-template-columns: 100%;
         }
+        .footer__list {
+          column-gap: 10px;
+        }
       }
       @media (max-width: 465px) {
-        .content__inner h1 {
-          font-size: 30px;
-          margin-bottom: 20px;
+        .content {
+          padding-bottom: 0;
         }
+        .content__inner h1,
         .content__inner h2 {
-          font-size: 24px;
           margin-bottom: 20px;
         }
         .header__inner {
@@ -462,7 +467,6 @@
           background-color: #3b04da;
         }
         .main__text-title {
-          font-size: 32px;
           font-weight: 600;
         }
         .main__btn {
@@ -474,13 +478,8 @@
         .popular {
           grid-template-columns: repeat(2, 1fr);
         }
-        .more-games {
-          width: 150px;
-          padding: 11px 15px;
-          text-align: center;
-        }
       }
-      @media (max-width: 407px) {
+      @media (max-width: 435px) {
         .main {
           padding-top: 160px;
         }
@@ -493,10 +492,7 @@
       }
       @media (max-width: 375px) {
         .main::after {
-          height: 310px;
-        }
-        .btn__link {
-          font-size: 11px;
+          height: 290px;
         }
         .main__btn {
           font-size: 18px;
